--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
         <ul>
             <li><a href="#intro">introduction</a></li>
-            <li><a href="table">Equipment and Resources</a></li>
-            <li><a href="summary">Summary</a></li>
-            <li><a href="footer">Contact</a></li>
+            <li><a href="#table">Equipment and Resources</a></li>
+            <li><a href="#summary">Summary</a></li>
+            <li><a href="#footer">Contact</a></li>
         </ul>
     </nav>
     
